--- a/catalog-service/src/main/resources/application.properties
+++ b/catalog-service/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=catalog-service
 server.port=8081
 server.shutdown=graceful
 management.endpoints.web.exposure.include=*
+
+catalog.page-size=10
+
 ######## DB_CONFIG ########
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:15432/postgres}
 spring.datasource.username=${DB_USERNAME:postgres}
