--- a/deployment/docker-compose/infra.yml
+++ b/deployment/docker-compose/infra.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "15432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "ps_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
