--- a/.github/workflows/catalog-service.yml
+++ b/.github/workflows/catalog-service.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       WORKDIR: ./catalog-service
       DOCKER_IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/bookstore-catalog-service
-      IMAGE_TAG: ${{ github.sha }}
+      IMAGE_TAG: ${{ github.ref_name }}-${{ github.sha }}
     defaults:
       run:
         working-directory: ${{ env.WORKDIR }}
@@ -47,5 +47,7 @@ jobs:
             -Dspring-boot.build-image.image.name=${DOCKER_IMAGE_NAME} \
             -Dspring-boot.build-image.image.tags=${IMAGE_TAG} \
             -DskipTests
+          echo "Verifying the built image..."
+          docker images | grep "${DOCKER_IMAGE_NAME}:${IMAGE_TAG}" || exit 1
           echo "Pushing image ${DOCKER_IMAGE_NAME}:${IMAGE_TAG}..."
           docker push ${DOCKER_IMAGE_NAME}:${IMAGE_TAG}
