--- a/.github/workflows/catalog-service.yml
+++ b/.github/workflows/catalog-service.yml
@@ -34,6 +34,11 @@ jobs:
       - name: Build with Maven
         run: ./mvnw -ntp verify
 
+      - name: Print Environment Variables
+        run: |
+          echo "DOCKER_IMAGE_NAME=${DOCKER_IMAGE_NAME}"
+          echo "IMAGE_TAG=${IMAGE_TAG}"
+
       - if: ${{ github.ref == 'refs/heads/master' }}
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -43,10 +48,12 @@ jobs:
 
       - name: Build and Publish Docker Image
         run: |
+          echo "Building the Docker image..."
           ./mvnw spring-boot:build-image \
             -Dspring-boot.build-image.image.name=${DOCKER_IMAGE_NAME} \
             -Dspring-boot.build-image.image.tags=${IMAGE_TAG} \
-            -DskipTests
+            -DskipTests || exit 1
+          echo "Docker image build completed."
           echo "Verifying the built image..."
           docker images | grep "${DOCKER_IMAGE_NAME}:${IMAGE_TAG}" || exit 1
           echo "Pushing image ${DOCKER_IMAGE_NAME}:${IMAGE_TAG}..."
