--- a/.github/workflows/catalog-service.yml
+++ b/.github/workflows/catalog-service.yml
@@ -14,7 +14,6 @@ jobs:
     env:
       WORKDIR: ./catalog-service
       DOCKER_IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/bookstore-catalog-service
-      IMAGE_TAG: ${{ github.ref_name }}-${{ github.sha }}
     defaults:
       run:
         working-directory: ${{ env.WORKDIR }}
@@ -34,11 +33,6 @@ jobs:
       - name: Build with Maven
         run: ./mvnw -ntp verify
 
-      - name: Print Environment Variables
-        run: |
-          echo "DOCKER_IMAGE_NAME=${DOCKER_IMAGE_NAME}"
-          echo "IMAGE_TAG=${IMAGE_TAG}"
-
       - if: ${{ github.ref == 'refs/heads/master' }}
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -48,13 +42,6 @@ jobs:
 
       - name: Build and Publish Docker Image
         run: |
-          echo "Building the Docker image..."
-          ./mvnw spring-boot:build-image \
-            -Dspring-boot.build-image.image.name=${DOCKER_IMAGE_NAME} \
-            -Dspring-boot.build-image.image.tags=${IMAGE_TAG} \
-            -DskipTests || exit 1
-          echo "Docker image build completed."
-          echo "Verifying the built image..."
-          docker images | grep "${DOCKER_IMAGE_NAME}:${IMAGE_TAG}" || exit 1
-          echo "Pushing image ${DOCKER_IMAGE_NAME}:${IMAGE_TAG}..."
-          docker push ${DOCKER_IMAGE_NAME}:${IMAGE_TAG}
+          ./mvnw spring-boot:build-image -DskipTests
+          echo "Pushing the image $DOCKER_IMAGE_NAME to Docker Hub..."
+          docker push $DOCKER_IMAGE_NAME
