--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.shutdown=graceful
 management.endpoints.web.exposure.include=*
 
 ######## OrderService_CONFIG ########
+orders.catalog-service-url=http://localhost:8081
 orders.order-events-exchange=orders-exchange
 orders.new-orders-queue=new-orders
 orders.delivered-orders-queue=delivered-orders
@@ -25,3 +26,13 @@ spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
 logging.level.org.springframework.amqp=INFO
 logging.level.org.springframework.amqp.rabbit.connection=INFO
 
+######## Resilience4j_CONFIG ########
+resilience4j.retry.backends.catalog-service.max-attempts=2
+resilience4j.retry.backends.catalog-service.wait-duration=1s
+
+resilience4j.circuitbreaker.backends.catalog-service.sliding-window-type=COUNT_BASED
+resilience4j.circuitbreaker.backends.catalog-service.sliding-window-size=6
+resilience4j.circuitbreaker.backends.catalog-service.minimum-number-of-calls=4
+resilience4j.circuitbreaker.backends.catalog-service.wait-duration-in-open-state=20s
+resilience4j.circuitbreaker.backends.catalog-service.permitted-number-of-calls-in-half-open-state=2
+resilience4j.circuitbreaker.backends.catalog-service.failure-rate-threshold=50
