Refactor order processing and add event-driven architecture
Replaced RabbitMQ controller and listener with a structured event-driven architecture. Added support for persisting and publishing order events, scheduled processing of orders, and new event types for enhanced order status tracking. Integrated ShedLock for distributed scheduling and updated DB schema for event storage.

--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -143,6 +143,16 @@
 			<artifactId>wiremock-testcontainers-module</artifactId>
 			<version>1.0-alpha-15</version>
 		</dependency>
+        <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-spring</artifactId>
+            <version>6.6.0</version>
+        </dependency>
+		<dependency>
+			<groupId>net.javacrumbs.shedlock</groupId>
+			<artifactId>shedlock-provider-jdbc-template</artifactId>
+			<version>6.6.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
