--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -11,6 +11,9 @@ orders.delivered-orders-queue=delivered-orders
 orders.cancelled-orders-queue=cancelled-orders
 orders.error-orders-queue=error-orders
 
+orders.publish-order-events-job-cron=*/5 * * * * *
+orders.new-orders-job-cron=*/10 * * * * *
+
 ######## DB_CONFIG ########
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:25432/postgres}
 spring.datasource.username=${DB_USERNAME:postgres}
