Add a new WebApp module and OAuth2 authentication.

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -36,12 +36,14 @@ spring:
             - Path=/orders/**
           filters:
             - RewritePath=/orders/?(?<segment>.*), /${segment}
-        - id: open-api
+        - id: openapi
           uri: http://localhost:${server.port}
           predicates:
             - Path=/v3/api-docs/**
           filters:
             - RewritePath=/v3/api-docs/?(?<segment>.*), /${segment}/v3/api-docs
+      default-filters:
+        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Methods Access-Control-Allow-Headers RETAIN_FIRST
 
   mvc:
     problemdetails:
