--- a/deployment/docker-compose/apps.yml
+++ b/deployment/docker-compose/apps.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 name: 'microservices-book-store'
 services:
   catalog-service:
@@ -33,6 +32,7 @@ services:
       - RABBITMQ_PORT=5672
       - RABBITMQ_USERNAME=guest
       - RABBITMQ_PASSWORD=guest
+      - OAUTH2_SERVER_URL=http://keycloak:9191
     ports:
       - "8082:8082"
     restart: unless-stopped
@@ -84,6 +84,21 @@ services:
       - ORDER_SERVICE_URL=http://order-service:8082
     ports:
       - "8989:8989"
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 700m
+
+  bookstore-webapp:
+    image: bodkiny/bookstore-webapp
+    container_name: bookstore-webapp
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - BOOKSTORE_API_GATEWAY_URL=http://api-gateway:8989
+      - OAUTH2_SERVER_URL=http://keycloak:9191
+    ports:
+      - "8080:8080"
     restart: unless-stopped
     deploy:
       resources:
