--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -14,6 +14,14 @@ orders.error-orders-queue=error-orders
 orders.publish-order-events-job-cron=*/5 * * * * *
 orders.new-orders-job-cron=*/10 * * * * *
 
+######## Swagger_CONFIG ########
+swagger.api-gateway-url=http://localhost:8989/orders
+
+######## OAuth2_CONFIG ########
+OAUTH2_SERVER_URL=http://localhost:9191
+REALM_URL=${OAUTH2_SERVER_URL}/realms/bookstore
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${REALM_URL}
+
 ######## DB_CONFIG ########
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:25432/postgres}
 spring.datasource.username=${DB_USERNAME:postgres}
