Remove obsolete test files from the codebase

--- a/deployment/docker-compose/infra.yml
+++ b/deployment/docker-compose/infra.yml
@@ -89,7 +89,7 @@ services:
     container_name: keycloak
     hostname: keycloak
     volumes:
-        - "C:/kc/realm-config:/opt/keycloak/data/import"
+        - "./realm-config:/opt/keycloak/data/import"
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=admin123
