--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -47,3 +47,8 @@ resilience4j.circuitbreaker.backends.catalog-service.minimum-number-of-calls=4
 resilience4j.circuitbreaker.backends.catalog-service.wait-duration-in-open-state=20s
 resilience4j.circuitbreaker.backends.catalog-service.permitted-number-of-calls-in-half-open-state=2
 resilience4j.circuitbreaker.backends.catalog-service.failure-rate-threshold=50
+
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.keycloak=DEBUG
+
